# MyPL

./: CMakeLists.txt  README.md  example.dsl  expression.cpp  expression.h  expressionAssignVar.cpp  expressionAssignVar.h  expressionBrL.cpp  expressionBrL.h  expressionBrR.cpp  expressionBrR.h  expressionDiv.cpp  expressionDiv.h  expressionEq.cpp  expressionFor.cpp  expressionFor.h  expressionGreater.cpp  expressionGreaterOrEq.cpp  expressionIf.cpp  expressionIf.h  expressionMul.cpp  expressionNotEq.cpp  expressionPrint.h  expressionSmaller.cpp  expressionSmaller.h  expressionSmallerOrEq.cpp  expressionSmallerOrEq.h  expressionSub.cpp  expressionSum.cpp  expressionSum.h  expressionVal.cpp  expressionVar.cpp  expressionVar.h  expressionWhile.cpp  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  listOfTokens.cpp  listOfTokens.h  (+9 more)
src/headers/: interpreter.h  interpreterArgs.h  lexer.h  node.h  parser.h  token.h
src/headers/expressions/: expression.h  expressionCodeBlock.h  expressionEq.h  expressionFor.h  expressionGreater.h  expressionGreaterOrEq.h  expressionIf.h  expressionMul.h  expressionNotEq.h  expressionSub.h  expressionVal.h  expressionWhile.h
src/headers/nodes/: nodeAssignVar.h  nodeCodeBlock.h  nodeLog.h  nodeSub.h  nodeSum.h  nodeVal.h  nodeVar.h
src/sources/: interpreter.cpp  interpreterArgs.cpp  lexer.cpp  main.cpp  node.cpp  parser.cpp  token.cpp
src/sources/expressions/: expressionCodeBlock.cpp  expressionDiv.cpp  expressionEq.cpp  expressionFor.cpp  expressionGreater.cpp  expressionGreaterOrEq.cpp  expressionIf.cpp  expressionNotEq.cpp  expressionPrint.cpp  expressionSmaller.cpp  expressionSmallerOrEq.cpp  expressionSub.cpp  expressionVar.cpp  expressionWhile.cpp
src/sources/nodes/: nodeAssignVar.cpp  nodeCodeBlock.cpp  nodeDiv.cpp  nodeEq.cpp  nodeGreater.cpp  nodeGreaterOrEq.cpp  nodeIf.cpp  nodeLog.cpp  nodeMul.cpp  nodeNotEq.cpp  nodePrint.cpp  nodeSmaller.cpp  nodeSmallerOrEq.cpp  nodeSub.cpp  nodeSum.cpp  nodeVal.cpp  nodeVar.cpp  nodeWhile.cpp
